kubernetes/apps/networking/externalservices/app/ceph.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app ceph
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  clusterIP: None
  ports:
    - name: http
      port: &port 8080
      protocol: TCP
      targetPort: *port
    - name: metrics
      port: &metrics 9283
      protocol: TCP
      targetPort: *metrics
---
apiVersion: v1
kind: Endpoints
metadata:
  name: &app ceph
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
subsets:
  - addresses:
      - ip: 10.0.0.104
      - ip: 10.0.0.105
      - ip: 10.0.0.106
      - ip: 10.0.0.107
    ports:
      - name: http
        port: 8080
        protocol: TCP
      - name: metrics
        port: 9283
        protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app ceph
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  parentRefs:
    - kind: ListenerSet
      name: deangalvin-dev-listener-set
      namespace: networking
  hostnames:
    - ceph.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: *app
          port: 8080
