kubernetes/apps/networking/externalservices/app/proxmox.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app proxmox
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  clusterIP: None
  ports:
    - name: https
      port: &port 8006
      protocol: TCP
      targetPort: *port
---
apiVersion: v1
kind: Endpoints
metadata:
  name: &app proxmox
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
subsets:
  - addresses:
      - ip: 10.0.0.107
    ports:
      - name: https
        port: 8006
        protocol: TCP
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: &app proxmox
spec:
  host: proxmox.networking.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app proxmox
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  parentRefs:
    - kind: ListenerSet
      name: deangalvin-dev-listener-set
      namespace: networking
  hostnames:
    - proxmox.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /sso
      backendRefs:
        - name: proxmox-sso
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: *app
          port: 8006
