kubernetes/apps/networking/externalservices/app/unifi.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app unifi
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  clusterIP: None
  ports:
    - name: https
      port: &port 443
      protocol: TCP
      targetPort: *port
---
apiVersion: v1
kind: Endpoints
metadata:
  name: &app unifi
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
subsets:
  - addresses:
      - ip: 192.168.2.1
    ports:
      - name: https
        port: 443
        protocol: TCP
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: &app unifi
spec:
  host: unifi.networking.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app unifi
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - unifi.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: *app
          port: 443
