kubernetes/apps/networking/externalservices/app/zwave.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app zwave
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  clusterIP: None
  ports:
    - name: http
      port: &port 8091
      protocol: TCP
      targetPort: *port
---
apiVersion: v1
kind: Endpoints
metadata:
  name: &app zwave
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
subsets:
  - addresses:
      - ip: 10.0.0.101
    ports:
      - name: http
        port: 8091
        protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app zwave
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - zwave.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: *app
          port: 8091
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app zwave
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: networking-localonly@kubernetescrd,networking-authelia@kubernetescrd
    hajimari.io/icon: mdi:server
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: "${INGRESS_CLASS}"
  rules:
    - host: &host zwave.deangalvin.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 8091
  tls:
    - hosts:
        - *host
      secretName: "${PRODUCTION_TLS}"
